# Operating-System-Labs

Lab1/CardGame/: CMakeLists.txt
Lab1/NumberGuess/: CMakeLists.txt
Lab1/NumberToString/: CMakeLists.txt
Lab1/StringLib/: CMakeLists.txt
Lab1/StringLib/include/: StringLib.h
Lab1/StringLib/src/: StringLib.c  main.c
Lab1/Time/: CMakeLists.txt
Lab1/TxtHandler/: CMakeLists.txt
Lab2/children_spawner/: CMakeLists.txt
Lab2/counter_handler/: CMakeLists.txt
Lab2/greetings/: CMakeLists.txt
Lab2/infinite_counter/: CMakeLists.txt
Lab2/shared_allocator_reader/: CMakeLists.txt
Lab2/ultra_terminator/: CMakeLists.txt
Lab3/bouncing_ball_update/: CMakeLists.txt
Lab3/intro_threads/: CMakeLists.txt
Lab3/square_root/: CMakeLists.txt
Lab3/tangent_sum/: CMakeLists.txt
Lab3/threads_intro_mutexes/: CMakeLists.txt
Lab3/two_threads/: CMakeLists.txt
Lab3/ultra_sum/: CMakeLists.txt
Lab4/ex3/: exec.c
Lab4/shm_reader/: CMakeLists.txt
Lab4/shm_writer/: CMakeLists.txt
Lab5/: schedule.c  schedule_results_ex1.csv  schedule_results_ex2_10.csv  schedule_results_ex2_1000.csv  schedule_results_ex2_50.csv  schedule_results_ex2_500.csv  thread_times.csv
Lab5/cpu_schedule/: CMakeLists.txt
Lab5/cpu_schedule_E1/: CMakeLists.txt
Lab5/cpu_schedule_E1/include/: task_measurer.h
Lab5/cpu_schedule_E1/src/: main.c  task_measurer.c
Lab5/thread_schedule/: CMakeLists.txt
bono_examen_1/imu_driver/: CMakeLists.txt
bono_examen_1/supervisor/: CMakeLists.txt
examen/: CMakeLists.txt
examen/include/: Plotting.h
examen/src/: Plotting.c  (+1 more)
project/: CMakeLists.txt
(+107 files in other folders)
